--- a/source/_posts/渗透测试实践指南.md
+++ b/source/_posts/渗透测试实践指南.md
@@ -124,5 +124,6 @@ ISBN: 9787111401414
 
 ## 下载 ##
 
+* [百度云下载](http://pan.baidu.com/s/1gdISme3)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROLzkG)
 * [MEGA下载](https://mega.co.nz/#!DJEnCRAI!0KWubUjz_Ks9E5HpjocaPv1MpPQmhmRRjK3vwe6nRuQ)
