--- a/source/_posts/编程珠玑.md
+++ b/source/_posts/编程珠玑.md
@@ -173,5 +173,6 @@ ISBN: 9787115179289
 
 ## 下载 ##
 
+* [百度云下载](http://pan.baidu.com/s/1hqJ6hlM)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROWbgc)
 * [MEGA下载](https://mega.co.nz/#!nMsCgIqC!J1-ipYfpPVsisJupIMDy6id5tgXqZIcLIoeuJWd9itk)
