--- a/source/_posts/操作系统-精髓与设计原理.md
+++ b/source/_posts/操作系统-精髓与设计原理.md
@@ -1,4 +1,4 @@
-title: 操作系统：精髓与设计原理 （中文第六版）
+title: 操作系统：精髓与设计原理 （中文第七版）
 date: 2015-04-29 14:00:05
 categories:
   - os
@@ -8,7 +8,7 @@ categories:
 
 格式：PDF
 类型：扫描版
-大小：11.8M
+大小：21.1M
 
 <!--more-->
 
