--- a/source/_posts/操作系统-精髓与设计原理.md
+++ b/source/_posts/操作系统-精髓与设计原理.md
@@ -31,6 +31,7 @@ ISBN: 9787121185106
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1sj5aRuP)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YROV4OU)
 + [MEGA下载](https://mega.co.nz/#!udFwUZCC!HY2RtIGgC5Umox3JMpyHNBs-ZDD07zLNLjXZr7ciQ1M)
 
