--- a/source/_posts/逆袭大学.md
+++ b/source/_posts/逆袭大学.md
@@ -252,5 +252,6 @@ ISBN: 9787115347473
 
 ## 下载
 
++ [百度云下载](http://pan.baidu.com/s/1qWunCqK)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YROUPRa)
 + [MEGA下载](https://mega.co.nz/#!SEUgATqJ!NQIAoRVyubmPDfNyysn6WzHkBbA3EyVywWAunGLN6nI)
