--- a/source/_posts/进军硅谷.md
+++ b/source/_posts/进军硅谷.md
@@ -234,5 +234,6 @@ ISBN: 9787121225666
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1jGIM4i6)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YROV5IW)
 + [MEGA下载](https://mega.co.nz/#!2N8FTBYJ!oMy7G6uU16QZPp9Vyw2D73hWQFTa_9hZ_t_V_a9JnoE)
