--- a/source/_posts/数据挖掘.md
+++ b/source/_posts/数据挖掘.md
@@ -8,7 +8,7 @@ categories:
 
 格式：PDF
 类型：扫描版
-大小：13.3M
+大小：19.8M
 
 <!--more-->
 
@@ -393,6 +393,5 @@ ISBN: 9787111391401
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROrLlY)
-* [百度云下载](http://pan.baidu.com/s/1ntsqql7)
-* [MEGA下载](https://mega.co.nz/#!XQ1yyD6b!tI58wXC-5a3CH-i6XpKXuFypDK7kXGuUpQ9NwoYxoOI)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXImo)
+* [百度云下载](http://pan.baidu.com/s/1DD5SU)
