--- a/source/_posts/算法之道.md
+++ b/source/_posts/算法之道.md
@@ -34,5 +34,6 @@ ISBN: 9787111294948
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1o6omMqm)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXY15)
 + [MEGA下载](https://mega.co.nz/#!PY0hRYCD!0eYXkyPzuybYFWYKqBJz-_XAmTiD5u0EfQZNHmCGj58)
