--- a/source/_posts/高级编译器设计与实现.md
+++ b/source/_posts/高级编译器设计与实现.md
@@ -375,5 +375,6 @@ ISBN: 9787111164296
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1ntBp3gl)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXXGv)
 + [MEGA下载](https://mega.co.nz/#!7N0FDSxT!dzgpfMVH3lQ_bkzRKKdTznvNpD7RsrL39SE0kw87Vuo)
