--- a/source/_posts/移动设计.md
+++ b/source/_posts/移动设计.md
@@ -81,5 +81,6 @@ ISBN: 9787121204869
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1jl5IA)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXt6n)
 + [MEGA下载](https://mega.co.nz/#!HctxUJ4R!NtsOeR3_kLuddTNsT2EpapQ73eS4n1WoU44pzkiknG8)
