--- a/source/_posts/算法竞赛入门经典.md
+++ b/source/_posts/算法竞赛入门经典.md
@@ -242,5 +242,6 @@ A.4 浅谈IDE 464
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1gdD39yN)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXCoU)
 + [MEGA下载](https://mega.co.nz/#!KFEAHa5a!gEoJWZu7XEfBnNWkc_H_zdJV-C5X40AfLesMvJ9kUWk)
