--- a/source/_posts/结网.md
+++ b/source/_posts/结网.md
@@ -57,6 +57,7 @@ Beta 个人修炼　　189
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1c095TMo)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXzhQ)
 + [MEGA下载](https://mega.co.nz/#!iBVEhKCB!ExffCTsvA95JifLFqaP3YDLzakJPoyWNaG_ppkIw-2Y)
 
