--- a/source/_posts/软件随想录.md
+++ b/source/_posts/软件随想录.md
@@ -80,6 +80,6 @@ ISBN: 9787115216342
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1bnliX91)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROseQC)
-* [MEGA下载](https://mega.co.nz/#!KVkHjK5Q!8i8Evi4GxVc3MRIZlETqkG31SKZ5XA7e_JQReWweU-A)
++ [百度云下载](http://pan.baidu.com/s/1qWxCxje)
++ [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFlVTc)
++ [MEGA下载](https://mega.co.nz/#!HQUxVCoI!hAudK3n2JO5uKw_RM6RdsiuoE2-bap0bAhV0qTr9SfA)
