--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -8,7 +8,7 @@ categories:
 
 格式：PDF
 类型：扫描版
-大小：14.4M
+大小：20.7M
 
 <!--more-->
 
@@ -125,6 +125,5 @@ Ethereal实验
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROs7-m)
-* [百度云下载](http://pan.baidu.com/s/1i3qw1nv)
-* [MEGA下载](https://mega.co.nz/#!6E9kAYBS!2pNQchsYS9ooPaecdublSuZKvBInzbOz8SMGHPesEzY)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFlRY3)
+* [MEGA下载](https://mega.co.nz/#!vYtC0B6b!3QR43i0hTn56a85X4qcxIPpCHtWYMhE82XLtDsgDlSI)
