--- a/source/_posts/编译原理.md
+++ b/source/_posts/编译原理.md
@@ -31,5 +31,6 @@ ISBN: 9787111251217
 
 ## 下载 ##
 
+* [百度云下载](http://pan.baidu.com/s/1kT48trL)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFm2y7)
 * [MEGA下载](https://mega.co.nz/#!nQ8TGCaQ!MF4WG7PRY8RNJGs6eHzSdHe4vZIID9zDMRqSn64VHOw)
