--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -125,5 +125,6 @@ Ethereal实验
 
 ## 下载 ##
 
+* [百度云下载](http://pan.baidu.com/s/1c0nlEak)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFlRY3)
 * [MEGA下载](https://mega.co.nz/#!vYtC0B6b!3QR43i0hTn56a85X4qcxIPpCHtWYMhE82XLtDsgDlSI)
