--- a/source/_posts/架构之美.md
+++ b/source/_posts/架构之美.md
@@ -1,7 +1,7 @@
 title: 架构之美 （包括安全之美、数据之美）
 date: 2015-04-29 15:18:27
 categories:
-  - 编程思想
+  - 设计模式·架构
 ---
 
 ![](http://img3.douban.com/lpic/s4018061.jpg)
