--- a/source/_posts/重构.md
+++ b/source/_posts/重构.md
@@ -1,7 +1,7 @@
 title: 重构--改善既有代码的设计 （中文版）
 date: 2015-04-29 15:39:35
 categories:
-  - 工程
+  - 设计模式·架构
 ---
 
 ![](http://img3.douban.com/lpic/s4157180.jpg)
