--- a/source/_posts/离散数学及其应用.md
+++ b/source/_posts/离散数学及其应用.md
@@ -1,7 +1,7 @@
 title: 离散数学及其应用（中文第六版）
 date: 2015-06-13 15:20:38
 categories:
-  - 数学
+  - 数学·数理逻辑
 ---
 
 ![](http://img3.douban.com/lpic/s6565260.jpg)
