--- a/source/_posts/程序员的数学.md
+++ b/source/_posts/程序员的数学.md
@@ -1,7 +1,7 @@
 title: 程序员的数学 （中文版）
 date: 2015-04-29 14:50:27
 categories:
-  - 数学
+  - 数学·数理逻辑
 ---
 
 ![](http://img3.douban.com/lpic/s20811702.jpg)
