--- a/source/_posts/企业应用架构模式.md
+++ b/source/_posts/企业应用架构模式.md
@@ -1,7 +1,7 @@
 title: 企业应用架构模式（经典重读）（中文版）
 date: 2015-06-18 17:50:06
 categories:
-  - 架构
+  - 设计模式·架构
 ---
 
 ![](http://img3.douban.com/lpic/s6164140.jpg)
