--- a/source/_posts/编程珠玑.md
+++ b/source/_posts/编程珠玑.md
@@ -1,4 +1,4 @@
-title: 编程珠玑 （中文第二版）
+title: 编程珠玑（图灵程序设计丛书）（中文第二版）
 date: 2015-04-29 15:21:46
 categories:
   - 编程思想
@@ -8,7 +8,7 @@ categories:
 
 格式：PDF
 类型：扫描版
-大小：6.02M
+大小：7.5M
 
 <!--more-->
 
@@ -173,6 +173,6 @@ ISBN: 9787115179289
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1hqJ6hlM)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROWbgc)
-* [MEGA下载](https://mega.co.nz/#!nMsCgIqC!J1-ipYfpPVsisJupIMDy6id5tgXqZIcLIoeuJWd9itk)
++ [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFAAvA)
++ [MEGA下载](https://mega.co.nz/#!HdVhhATJ!_VfNXLnLYUiV1WjPXPLAoQ-pY4L0SWn1dvaiWxw1fbw)
++ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8823649)
