--- a/source/_posts/漫画数据库.md
+++ b/source/_posts/漫画数据库.md
@@ -8,7 +8,7 @@ categories:
 
 格式：PDF
 类型：扫描版
-大小：32.3M
+大小：5.04M
 
 <!--more-->
 
@@ -124,5 +124,6 @@ Web与数据库
 
 ## 下载 ##
 
-+ [百度云下载](http://pan.baidu.com/share/link?shareid=1496765522&uk=2804157017)
-+ [千易下载](http://1000eb.com/1dw5f)
++ [百度云下载](http://pan.baidu.com/s/1hq1sxaW)
++ [微盘下载](http://vdisk.weibo.com/s/qh6_ZL4qwYl04)
++ [千易下载](http://1000eb.com/1dwy4)
