--- a/source/_posts/人人都是产品经理.md
+++ b/source/_posts/人人都是产品经理.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img4.douban.com/lpic/s27461357.jpg)
 
-格式：MOBI
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -110,6 +110,6 @@ ISBN: 9787121170690
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROG3oQ)
-* [百度云下载](http://pan.baidu.com/s/1dD0D4B3)
-* [MEGA下载](https://mega.co.nz/#!CJ1R1YJK!YnzXx3PdANE-Cs33EBMo7vEuLPZ1K3k9S-qR-CSeTZU)
+* [百度云下载](http://pan.baidu.com/s/1i34Ekmh)
+* [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcQ)
+* [千易下载](http://1000eb.com/1dyim)
