--- a/source/_posts/代码的未来.md
+++ b/source/_posts/代码的未来.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img5.douban.com/lpic/s26393136.jpg)
 
-格式：MOBI
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -348,6 +348,5 @@ ZeroMQ 示例程序　　352
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/154gv8)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROzSZp)
-* [MEGA下载](https://mega.co.nz/#!OBMwCRyS!AvOMmHsGh4rOmiXPKQY7CC9eJ_C4QUV4VB-hdZcNk3U)
+* [百度云下载](http://pan.baidu.com/s/1i3s2UlZ)
+* [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcz)
