--- a/source/_posts/信息简史.md
+++ b/source/_posts/信息简史.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img5.douban.com/lpic/s27237628.jpg)
 
-格式：MOBI
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -61,6 +61,6 @@ ISBN: 9787115331809
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1pJLVVy7)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTBaE)
-* [MEGA下载](https://mega.co.nz/#!WQdliIzD!dDjC_M9iZ70qmk68MkEqySC9xzd9wFAZn9og31Luvyo)
+* [百度云下载](http://pan.baidu.com/s/1eQB5Xr8)
+* [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRd9)
+* [千易下载](http://1000eb.com/1dyit)
