--- a/source/_posts/30天自制操作系统.md
+++ b/source/_posts/30天自制操作系统.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img5.douban.com/lpic/s11138117.jpg)
 
-格式：MOBI
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -286,6 +286,5 @@ ISBN: 9787115287960
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1jGHwxwU)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTAKq)
-* [MEGA下载](https://mega.co.nz/#!yMUR2JZT!F3zILXWULLhHYNRmhGAr9GphHKIuINAPeiwFSfsKj5A)
+* [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcX)
+* [千易下载](http://1000eb.com/1dyif)
