--- a/source/_posts/史蒂夫·乔布斯传.md
+++ b/source/_posts/史蒂夫·乔布斯传.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img3.douban.com/lpic/s27207923.jpg)
 
-格式：MOBI
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -80,6 +80,6 @@ ISBN: 9787508643298
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRPhQ2E)
-* [百度云下载](http://pan.baidu.com/s/1pJ1FaQn)
-* [MEGA下载](https://mega.co.nz/#!OI9EGbKB!gfeq9ws-Kw_drUxEq5JnlPi5j12hiyclQU7kzjVvxzM)
+* [百度云下载](http://pan.baidu.com/s/1CudpO)
+* [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcV)
+* [千易下载](http://1000eb.com/1dyin)
