--- a/source/_posts/数学之美.md
+++ b/source/_posts/数学之美.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img3.douban.com/lpic/s9114855.jpg)
 
-格式：MOBI
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -67,6 +67,6 @@ ISBN: 9787115282828
 
 ## 下载
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROUvO4)
-* [百度云下载](http://pan.baidu.com/s/1i3DwBpb)
-* [MEGA下载](https://mega.co.nz/#!LR8SyLqD!u3LuEETLLRJMpVIWWnrcUda5I-cj119W5XkrGgjZsC8)
+* [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRdd)
+* [百度云下载](http://pan.baidu.com/s/1pJp8UXd)
+* [千易下载](http://1000eb.com/1dyio)
