--- a/source/_posts/啊哈！算法.md
+++ b/source/_posts/啊哈！算法.md
@@ -8,7 +8,7 @@ categories:
 
 格式：PDF
 类型：扫描版
-大小：6.68M
+大小：4.35M
 
 <!--more-->
 
@@ -82,6 +82,6 @@ ISBN: 9787115354594
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1qWNYeHu)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROsl4F)
-* [MEGA下载](https://mega.co.nz/#!uZMgCJ6I!47WiVLtz8k2Rh4ZGynmBRzqHHNEXc6nAAvpj8mNZa6Y)
+* [MEGA下载](https://mega.co.nz/#!LNkx3T7D!riXuyJ_pfzuU2qadq8WNS5uYj_kI3Bw2A_hGfnrn4ts)
+* [千易下载](http://1000eb.com/1enb8)
