--- a/source/_posts/30天自制操作系统.md
+++ b/source/_posts/30天自制操作系统.md
@@ -13,9 +13,9 @@ categories:
 
 ## 出版信息 ##
 
-作者: [日] 川合秀实 
+作者: [日] 川合秀实
 出版社: 人民邮电出版社
-译者: 周自恒 / 李黎明 / 曾祥江 / 张文旭 
+译者: 周自恒 / 李黎明 / 曾祥江 / 张文旭
 出版年: 2012-8-11
 页数: 710
 定价: 99.00元
@@ -286,5 +286,7 @@ ISBN: 9787115287960
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1mgAK6ms)
 * [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcX)
 * [千易下载](http://1000eb.com/1dyif)
++ [MEGA下载](https://mega.nz/#!nd0VXQLb!C2L6rNg-JizELmp75WNneAry2Gja07v61pNA36zy5Ww)
