--- a/source/_posts/编程珠玑.md
+++ b/source/_posts/编程珠玑.md
@@ -175,4 +175,4 @@ ISBN: 9787115179289
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFAAvA)
 + [MEGA下载](https://mega.co.nz/#!HdVhhATJ!_VfNXLnLYUiV1WjPXPLAoQ-pY4L0SWn1dvaiWxw1fbw)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8823649)
++ [千易下载](http://1000eb.com/1ggd8)
