--- a/source/_posts/代码之美.md
+++ b/source/_posts/代码之美.md
@@ -281,3 +281,4 @@ DiffMerge的曲折历史
 * [百度云下载](http://pan.baidu.com/s/1jGIeY26)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROzSZk)
 * [MEGA下载](https://mega.co.nz/#!HFMFAZBK!pimpxJuWu7QFuSYg-NIUxGml1GmeKc_h8OQDTD08H94)
+* [千易下载](http://1000eb.com/1ggec)
