--- a/source/_posts/代码大全.md
+++ b/source/_posts/代码大全.md
@@ -74,3 +74,4 @@ ISBN: 9787121022982
 * [百度云下载](http://pan.baidu.com/s/1qW7JrGw)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRP1hpT)
 * [MEGA下载](https://mega.co.nz/#!WF0RTCCT!X8Rn8g1nEZRishuBvpK_Y3qAm0jretuh1prxLKeRTRo)
+* [千易下载](http://1000eb.com/1ggeh)
