--- a/source/_posts/代码整洁之道.md
+++ b/source/_posts/代码整洁之道.md
@@ -309,4 +309,4 @@ A.10.2　使用线程的客户端/服务器代码　324
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_vDV)
 + [MEGA下载](https://mega.co.nz/#!HBNFSAqB!-TRtGvNM2p8NrzL7Vv6rTUlboDUL8LzwXcbYYmA3bcg)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8822681)
++ [千易下载](http://1000eb.com/1ggee)
