--- a/source/_posts/代码的未来.md
+++ b/source/_posts/代码的未来.md
@@ -350,3 +350,4 @@ ZeroMQ 示例程序　　352
 
 * [百度云下载](http://pan.baidu.com/s/1i3s2UlZ)
 * [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcz)
+* [千易下载](http://1000eb.com/1ggef)
