--- a/source/_posts/大教堂与集市.md
+++ b/source/_posts/大教堂与集市.md
@@ -48,3 +48,4 @@ ISBN: 9787111452478
 * [百度云下载](http://pan.baidu.com/s/1jG25Whw)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROzSHn)
 * [MEGA下载](https://mega.co.nz/#!jUkjhbDJ!waBSjyPggUIUXFBn5Xw60xy6HD8fKUDYDkXk4jPXFoM)
+* [千易下载](http://1000eb.com/1ggei)
