--- a/source/_posts/疯狂的程序员.md
+++ b/source/_posts/疯狂的程序员.md
@@ -30,3 +30,4 @@ ISBN: 9787115190239
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRORoj3)
 * [百度云下载](http://pan.baidu.com/s/1eQ8dcFg)
 * [MEGA下载](https://mega.co.nz/#!jVdAzbyB!JGnTNnbbhwcM_JxMaIznpIp5IY5LWg7YhfiDGlWwLZk)
+* [千易下载](http://1000eb.com/1ggem)
