--- a/source/_posts/高效程序员的45个习惯.md
+++ b/source/_posts/高效程序员的45个习惯.md
@@ -37,3 +37,4 @@ ISBN: 9787115215536
 * [百度云下载](http://pan.baidu.com/s/1ntHsYbn)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROzSYM)
 * [MEGA下载](https://mega.co.nz/#!TY1mRTSY!HNGmSb8I63xld6mPF_S-x-YtfmKra9RbodWAwh7yu08)
+* [千易下载](http://1000eb.com/1ggej)
