--- a/source/_posts/大话设计模式.md
+++ b/source/_posts/大话设计模式.md
@@ -266,3 +266,4 @@ A.15 客套 366
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROslqa)
 * [百度云下载](http://pan.baidu.com/s/1sjkGzeP)
 * [MEGA下载](https://mega.co.nz/#!nJNhVBYC!BO-3T37bLP5MJUka7tF_kCughsgTYIWJfIxG_NS0IBM)
+* [千易下载](http://1000eb.com/1ggdz)
