--- a/source/_posts/编译原理.md
+++ b/source/_posts/编译原理.md
@@ -34,3 +34,4 @@ ISBN: 9787111251217
 * [百度云下载](http://pan.baidu.com/s/1kT48trL)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFm2y7)
 * [MEGA下载](https://mega.co.nz/#!nQ8TGCaQ!MF4WG7PRY8RNJGs6eHzSdHe4vZIID9zDMRqSn64VHOw)
+* [千易下载](http://1000eb.com/1ggdv)
