--- a/source/_posts/人月神话.md
+++ b/source/_posts/人月神话.md
@@ -87,3 +87,4 @@ Mills的建议
 * [百度云下载](http://pan.baidu.com/s/1o6OFL6E)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTBaF)
 * [MEGA下载](https://mega.co.nz/#!GYEiHI7K!LEL8o4IeB02NwjJevod9elLkdqhSx9GBcZoNT5mRisY)
+* [千易下载](http://1000eb.com/1gghk)
