--- a/source/_posts/企业应用架构模式.md
+++ b/source/_posts/企业应用架构模式.md
@@ -353,4 +353,4 @@ ISBN: 9787111303930
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_mDy)
 + [MEGA下载](https://mega.co.nz/#!nB9WCTBC!kfGcRZYVqXBWpGWdMDW29hyOY9a8U9q17g6yJYZl5cs)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8820187)
++ [千易下载](http://1000eb.com/1gghd)
