--- a/source/_posts/加密与解密.md
+++ b/source/_posts/加密与解密.md
@@ -30,3 +30,4 @@ ISBN: 9787121066443
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROA2Pw)
 * [百度云下载](http://pan.baidu.com/s/1sjFiY3z)
 * [MEGA下载](https://mega.co.nz/#!mE8mTISK!lb1mHvxgV9ikWqHk1zkWB_Dyb3QOGu9IvA-QobtWsfY)
+* [千易下载](http://1000eb.com/1ggg6)
