--- a/source/_posts/图灵的秘密.md
+++ b/source/_posts/图灵的秘密.md
@@ -58,4 +58,4 @@ ISBN: 9787115282149
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFkv0S)
 + [MEGA下载](https://mega.co.nz/#!2VVTALjI!Jsjy1y7ecZQp1v4Kof4T3Ef_0kAWqitidF98NYSiKIM)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8804359)
++ [千易下载](http://1000eb.com/1ggie)
