--- a/source/_posts/图解网站分析.md
+++ b/source/_posts/图解网站分析.md
@@ -361,4 +361,4 @@ Adplanner的使用方法　　256
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFkDvQ)
 + [MEGA下载](https://mega.co.nz/#!TMFwxYqY!sRegEtWM5yK1UT252P5FE7kJxp3lEjUsbryE-bcdcGY)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8802767)
++ [千易下载](http://1000eb.com/1ggig)
