--- a/source/_posts/数据库系统概念.md
+++ b/source/_posts/数据库系统概念.md
@@ -1051,6 +1051,7 @@ ISBN: 9787111375296
 + [百度云下载](http://pan.baidu.com/s/1bnm678r)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YROU-u3)
 + [MEGA下载](https://mega.co.nz/#!qM0zwb4C!IG6wLCP2LdEbcNHItbLmtb2Y2l_v0xUefP6D3J2zWbY)
++ [千易下载](http://1000eb.com/1gghx)
 
 <!-- 5e
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROsmRP)
