--- a/source/_posts/数据挖掘十大算法.md
+++ b/source/_posts/数据挖掘十大算法.md
@@ -111,3 +111,4 @@ ISBN: 9787302310617
 * [百度云下载](http://pan.baidu.com/s/1mgCCylq)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROVJhx)
 * [MEGA下载](https://mega.co.nz/#!zB8UWCBJ!k0yrjjHyZvVpV1i91s8aLtdvKOxfmhG6KScNeqDunPk)
+* [千易下载](http://1000eb.com/1gght)
