--- a/source/_posts/架构之美.md
+++ b/source/_posts/架构之美.md
@@ -154,3 +154,4 @@ ISBN: 9787111283560
 * [百度云下载](http://pan.baidu.com/s/1lRoAE)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROzSH5)
 * [MEGA下载](https://mega.co.nz/#!WM9FTI5Q!5l9Se6NblB-lqVRHG0n_Nk9uxoS6-pZ62aoHzFT5tRY)
+* [千易下载](http://1000eb.com/1gggx)
