--- a/source/_posts/梦断代码.md
+++ b/source/_posts/梦断代码.md
@@ -32,3 +32,4 @@ ISBN: 9787121066795
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROA2qT)
 * [百度云下载](http://pan.baidu.com/s/1o6ifeFw)
 * [MEGA下载](https://mega.co.nz/#!SU8ihbrb!mXC6GSVVqQRgmz0Zj-z04SSMsD3RE4iHCe3LbqIc9mc)
+* [千易下载](http://1000eb.com/1ggh1)
