--- a/source/_posts/欺骗的艺术.md
+++ b/source/_posts/欺骗的艺术.md
@@ -295,3 +295,4 @@ ISBN: 9787302369738
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRORojS)
 * [百度云下载](http://pan.baidu.com/s/1o6vB0XO)
 * [MEGA下载](https://mega.co.nz/#!zA9TjBYT!bi_nqParWiJjsf-bvYGRquZiBNFl7i7LZZJOF0_QW9M)
+* [千易下载](http://1000eb.com/1gghe)
