--- a/source/_posts/离散数学及其应用.md
+++ b/source/_posts/离散数学及其应用.md
@@ -592,4 +592,4 @@ ISBN: 9787111350392
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFkC_n)
 + [MEGA下载](https://mega.co.nz/#!vUcG0ILa!zC4KqclO3vrzkYorAEhXyl0CRDF6P54C6UmFExjmB68)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8802475)
++ [千易下载](http://1000eb.com/1ggh5)
