--- a/source/_posts/自制编程语言.md
+++ b/source/_posts/自制编程语言.md
@@ -286,3 +286,4 @@ ISBN: 9787115333209
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROSj3e)
 * [百度云下载](http://pan.baidu.com/s/1eQ7xfJc)
 * [MEGA下载](https://mega.co.nz/#!HZlmjJ4J!AojNWWw0PDqRA9ICcfSKnaSV49uWTDwYMsQcmj1Hs0I)
+* [千易下载](http://1000eb.com/1ggih)
