--- a/source/_posts/计算机体系结构.md
+++ b/source/_posts/计算机体系结构.md
@@ -284,4 +284,4 @@ C.10 　历史回顾与参考文献　　512
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFB5oQ)
 + [MEGA下载](https://mega.co.nz/#!bcEwBLqa!eyfUOsz9hS2YOpSTODoOPrOk4Dkq2aIQF_2d_ITABLA)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8823285)
++ [千易下载](http://1000eb.com/1gggi)
