--- a/source/_posts/软件故事.md
+++ b/source/_posts/软件故事.md
@@ -67,3 +67,4 @@ ISBN: 9787115355089
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROSi95)
 * [百度云下载](http://pan.baidu.com/s/1nt3La5b)
 * [MEGA下载](https://mega.co.nz/#!qZ8UDbab!Oou3F7LY7eX0CZU8gJQ-KZB4Nu9KXQhAuWZ8qhzmHno)
+* [千易下载](http://1000eb.com/1gghn)
