--- a/source/_posts/软件测试.md
+++ b/source/_posts/软件测试.md
@@ -381,4 +381,4 @@ ISBN: 9787115247995
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_NNg)
 + [MEGA下载](https://mega.co.nz/#!XJEEEJLC!AIVULsD1ItXT1yqZHH_qtYuNOsqspO_GuKpDSrjEmgI)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8806721)
++ [千易下载](http://1000eb.com/1gghh)
