--- a/source/_posts/重构.md
+++ b/source/_posts/重构.md
@@ -159,3 +159,4 @@ ISBN: 9787115221704
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROFjWH)
 * [百度云下载](http://pan.baidu.com/s/1qWp1KnE)
 * [MEGA下载](https://mega.co.nz/#!SItnnJjI!Wf0l2qx03WPlw4WNOmwDHGsUqFMFvs4gE0jUSPmYnDw)
+* [千易下载](http://1000eb.com/1ggii)
