--- a/source/_posts/黑客与画家.md
+++ b/source/_posts/黑客与画家.md
@@ -70,3 +70,4 @@ ISBN: 9787115249494
 * [百度云下载](http://pan.baidu.com/s/1mgBSDLI)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTBaB)
 * [MEGA下载](https://mega.co.nz/#!KYdAHR4L!5kbMHIgh2FoFxyGsxpts_JDJp60n4SoT-LvbftDoATg)
+* [千易下载](http://1000eb.com/1ggfx)
