--- a/source/_posts/数据挖掘.md
+++ b/source/_posts/数据挖掘.md
@@ -395,3 +395,4 @@ ISBN: 9787111391401
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXImo)
 * [百度云下载](http://pan.baidu.com/s/1DD5SU)
+* [千易下载](http://1000eb.com/1gghv)
