--- a/source/_posts/构建之法.md
+++ b/source/_posts/构建之法.md
@@ -137,3 +137,4 @@ ISBN: 9787115369161
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROATTv)
 * [百度云下载](http://pan.baidu.com/s/1dDgwi2H)
 * [MEGA下载](https://mega.co.nz/#!KFtSHRqL!M04bJbtgr8Ahd7EcTePYKTE_ffNx99iARfI7kkbxkgI)
+* [千易下载](http://1000eb.com/1ggg0)
