--- a/source/_posts/灰帽黑客.md
+++ b/source/_posts/灰帽黑客.md
@@ -493,3 +493,4 @@ ISBN: 9787302301509
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRPa-Gk)
 * [百度云下载](http://pan.baidu.com/s/1o6FVgiY)
 * [MEGA下载](https://mega.co.nz/#!bJkQ3LKC!si0bg0UISrBZg6pULYhWpfovRGlXVCytzaqC5RYPdEo)
+* [千易下载](http://1000eb.com/1gggk)
