--- a/source/_posts/计算机组成与设计.md
+++ b/source/_posts/计算机组成与设计.md
@@ -412,4 +412,4 @@ B.13　练习题533
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_Gma)
 + [MEGA下载](https://mega.co.nz/#!HM02CCDL!1rTW-qVZ5loaHoHpGgI2F7ctU43nWKmC62z8j0Tf_Kk)
-+ [CSDN下载](http://download.csdn.net/detail/wizardforcel/8822887)
++ [千易下载](http://1000eb.com/1ggga)
