--- a/source/_posts/现代操作系统.md
+++ b/source/_posts/现代操作系统.md
@@ -365,6 +365,7 @@ l.2.4第四代（1980年至今）：个人
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1qW1PbWg)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFjlBa)
 + [MEGA下载](https://mega.co.nz/#!3FsTHJaL!Z-lAzEp2fZY5OLZVOgf3uo6cKFW0J2XJaePavH3kHoc)
 + [千易下载](http://1000eb.com/1eoly)
