--- a/source/_posts/编程珠玑.md
+++ b/source/_posts/编程珠玑.md
@@ -173,6 +173,7 @@ ISBN: 9787115179289
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1qWmqcws)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFAAvA)
 + [MEGA下载](https://mega.co.nz/#!HdVhhATJ!_VfNXLnLYUiV1WjPXPLAoQ-pY4L0SWn1dvaiWxw1fbw)
 + [千易下载](http://1000eb.com/1ggd8)
