--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -379,6 +379,7 @@ ISBN: 9787302274629
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1qW46V5y)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFuq2f)
 + [MEGA下载](https://mega.nz/#!CVlilYra!ceA9kDpjS6AYwzqwnPJI6SlGVW1F8nDngxd3mfWQzeg)
 + [千易下载](http://1000eb.com/1gcc6)
