--- a/source/_posts/软件测试.md
+++ b/source/_posts/软件测试.md
@@ -379,6 +379,7 @@ ISBN: 9787115247995
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1kTjc0N9)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_NNg)
 + [MEGA下载](https://mega.co.nz/#!XJEEEJLC!AIVULsD1ItXT1yqZHH_qtYuNOsqspO_GuKpDSrjEmgI)
 + [千易下载](http://1000eb.com/1gghh)
