--- a/source/_posts/图灵的秘密.md
+++ b/source/_posts/图灵的秘密.md
@@ -56,6 +56,7 @@ ISBN: 9787115282149
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1pJOlLb1)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFkv0S)
 + [MEGA下载](https://mega.co.nz/#!2VVTALjI!Jsjy1y7ecZQp1v4Kof4T3Ef_0kAWqitidF98NYSiKIM)
 + [千易下载](http://1000eb.com/1ggie)
