--- a/source/_posts/数学之美.md
+++ b/source/_posts/数学之美.md
@@ -67,6 +67,7 @@ ISBN: 9787115282828
 
 ## 下载
 
+* [百度云下载](http://pan.baidu.com/s/1qWBYzTy)
 * [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRdd)
 * [百度云下载](http://pan.baidu.com/s/1pJp8UXd)
 * [千易下载](http://1000eb.com/1dyio)
