--- a/source/_posts/数据挖掘导论.md
+++ b/source/_posts/数据挖掘导论.md
@@ -313,6 +313,7 @@ ISBN: 9787115241009
 
 ## 下载 ##
 
++ [百度云下载](http://pan.baidu.com/s/1gdtZRqj)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFnUlG)
 + [千易下载](http://1000eb.com/1gczo)
 + [MEGA下载](https://mega.nz/#!aRshDIIK!oOMyIS22s9A94ojIcnWJDPpErAzdlvbbziXRPidKsQA)
