--- a/source/_posts/30天自制操作系统.md
+++ b/source/_posts/30天自制操作系统.md
@@ -287,6 +287,6 @@ ISBN: 9787115287960
 ## 下载 ##
 
 + [百度云下载](http://pan.baidu.com/s/1mgAK6ms)
-* [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcX)
-* [千易下载](http://1000eb.com/1dyif)
-+ [MEGA下载](https://mega.nz/#!nd0VXQLb!C2L6rNg-JizELmp75WNneAry2Gja07v61pNA36zy5Ww)
++ [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcX)
++ [千易下载](http://1000eb.com/1dyif)
++ [FilePi下载](http://filepi.com/i/peZBk9F)
