--- a/source/_posts/产品经理那些事儿.md
+++ b/source/_posts/产品经理那些事儿.md
@@ -110,5 +110,5 @@ Why Buy From Me　　244
 
 + [百度云下载](http://pan.baidu.com/s/1hqeVA40)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFwarR)
-+ [MEGA下载](https://mega.co.nz/#!fM0hXTQJ!zIPVL8qLi0X3F_ErFCThbK6T8vAwZ0jEIN5U7PRqS1M)
++ [FilePi下载](http://filepi.com/i/4KQuuY6)
 + [千易下载](http://1000eb.com/1ggdp)
