--- a/source/_posts/代码整洁之道.md
+++ b/source/_posts/代码整洁之道.md
@@ -309,5 +309,5 @@ A.10.2　使用线程的客户端/服务器代码　324
 
 + [百度云下载](http://pan.baidu.com/s/1o6zlt14)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_vDV)
-+ [MEGA下载](https://mega.co.nz/#!HBNFSAqB!-TRtGvNM2p8NrzL7Vv6rTUlboDUL8LzwXcbYYmA3bcg)
++ [FilePi下载](http://filepi.com/i/fUqSCO9)
 + [千易下载](http://1000eb.com/1ggee)
