--- a/source/_posts/大话数据结构.md
+++ b/source/_posts/大话数据结构.md
@@ -401,5 +401,5 @@ ISBN: 9787302255659
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRPhFif)
 * [百度云下载](http://pan.baidu.com/s/1eQcUNpo)
-* [MEGA下载](https://mega.co.nz/#!WdchCL5C!uXE4hOfsUGWZLEDp0kGBpF7jyU7PPIoNi3g7U3fdd4A)
+* [FilePi下载](http://filepi.com/i/z86X5HI)
 * [千易下载](http://1000eb.com/1ggdy)
