--- a/source/_posts/大话设计模式.md
+++ b/source/_posts/大话设计模式.md
@@ -265,5 +265,5 @@ A.15 客套 366
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROslqa)
 * [百度云下载](http://pan.baidu.com/s/1sjkGzeP)
-* [MEGA下载](https://mega.co.nz/#!nJNhVBYC!BO-3T37bLP5MJUka7tF_kCughsgTYIWJfIxG_NS0IBM)
+* [FilePi下载](http://filepi.com/i/Dpzm9Eo)
 * [千易下载](http://1000eb.com/1ggdz)
