--- a/source/_posts/番茄工作法图解.md
+++ b/source/_posts/番茄工作法图解.md
@@ -161,5 +161,5 @@ ISBN: 9787115246691
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRP4CF2)
 * [百度云下载](http://pan.baidu.com/s/1rWhTO)
-* [MEGA下载](https://mega.co.nz/#!mIUXFa5a!pwN7OuOdy_h73hNDYqMLgIyBt6OqRje41vmv4KO5lag)
+* [FilePi下载](http://filepi.com/i/DJPbpI5)
 * [千易下载](http://1000eb.com/1ggeo)
