--- a/source/_posts/程序员思维修炼.md
+++ b/source/_posts/程序员思维修炼.md
@@ -104,5 +104,5 @@ ISBN: 9787115374936
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROG3Ak)
 * [百度云下载](http://pan.baidu.com/s/1mgoTT9I)
-* [MEGA下载](https://mega.co.nz/#!CNMXnS5T!oa9hNmvIu98sNDswRT1db0J8mj5bHoBZP159lJOAhjU)
+* [FilePi下载](http://filepi.com/i/ATjcLax)
 * [千易下载](http://1000eb.com/1gge6)
