--- a/source/_posts/程序员的数学.md
+++ b/source/_posts/程序员的数学.md
@@ -298,5 +298,5 @@ ISBN: 9787115293688
 
 * [百度云下载](http://pan.baidu.com/s/1kTnBVy3)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROWm96)
-* [MEGA下载](https://mega.co.nz/#!nd0nmILZ!ajEycGBobEEEXMAdA1Pcem6N1IafH7p_s54XqrfZxc8)
+* [FilePi下载](http://filepi.com/i/kYJyrCb)
 * [千易下载](http://1000eb.com/1ggdm)
