--- a/source/_posts/程序员的自我修养.md
+++ b/source/_posts/程序员的自我修养.md
@@ -137,5 +137,5 @@ A.3 常用开发工具命令行参考
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROA1n0)
 * [百度云下载](http://pan.baidu.com/s/1c0nPjlI)
-* [MEGA下载](https://mega.co.nz/#!mE8mTISK!lb1mHvxgV9ikWqHk1zkWB_Dyb3QOGu9IvA-QobtWsfY)
+* [FilePi下载](http://filepi.com/i/GdsFPeq)
 * [千易下载](http://1000eb.com/1ggdk)
