--- a/source/_posts/程序员面试宝典.md
+++ b/source/_posts/程序员面试宝典.md
@@ -185,5 +185,5 @@ Oriented）对这种说法的体现也是最优秀的。
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROvMOu)
 * [百度云下载](http://pan.baidu.com/s/1kTkmqpT)
-* [MEGA下载](https://mega.co.nz/#!SYVz0brB!cjD78Bq7_SXcfew3VaoZ7x0_tWFIIFVWw94avK-LUBE)
+* [FilePi下载](http://filepi.com/i/Uv1i7rA)
 * [千易下载](http://1000eb.com/1gge9)
