--- a/source/_posts/编程之美.md
+++ b/source/_posts/编程之美.md
@@ -104,5 +104,5 @@ ISBN: 9787121060748
 
 * [百度云下载](http://pan.baidu.com/s/1jG1hvdO)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTAKc)
-* [MEGA下载](https://mega.co.nz/#!vQE1nQhA!ckcWHQ4XSOIes5xW2UMfPWn7uDPnV6iOUiiH_bS8bd4)
+* [FilePi下载](http://filepi.com/i/kB9X7ef)
 * [千易下载](http://1000eb.com/1ggd9)
