--- a/source/_posts/编程人生.md
+++ b/source/_posts/编程人生.md
@@ -72,5 +72,5 @@ ISBN: 9787115239075
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRPbCa1)
 * [百度云下载](http://pan.baidu.com/s/1pVjtG)
-* [MEGA下载](https://mega.co.nz/#!jMFXjA7A!k4wU8g1jCv52x7XHb9_y0M4dOwy27NxUOv_CNmumXvo)
+* [FilePi下载](http://filepi.com/i/T60ZEBo)
 * [千易下载](http://1000eb.com/1ggdb)
