--- a/source/_posts/计算机体系结构.md
+++ b/source/_posts/计算机体系结构.md
@@ -284,5 +284,5 @@ C.10 　历史回顾与参考文献　　512
 
 + [百度云下载](http://pan.baidu.com/s/1i3FA5Hr)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFB5oQ)
-+ [MEGA下载](https://mega.co.nz/#!bcEwBLqa!eyfUOsz9hS2YOpSTODoOPrOk4Dkq2aIQF_2d_ITABLA)
++ [FilePi下载](http://filepi.com/i/KsI3p1h)
 + [千易下载](http://1000eb.com/1gggi)
