--- a/source/_posts/计算机网络-自顶向下.md
+++ b/source/_posts/计算机网络-自顶向下.md
@@ -127,5 +127,5 @@ Ethereal实验
 
 * [百度云下载](http://pan.baidu.com/s/1c0nlEak)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFlRY3)
-* [MEGA下载](https://mega.co.nz/#!vYtC0B6b!3QR43i0hTn56a85X4qcxIPpCHtWYMhE82XLtDsgDlSI)
+* [FilePi下载](http://filepi.com/i/GSb6gRW)
 * [千易下载](http://1000eb.com/1ggge)
