--- a/source/_posts/代码之美.md
+++ b/source/_posts/代码之美.md
@@ -280,5 +280,5 @@ DiffMerge的曲折历史
 
 * [百度云下载](http://pan.baidu.com/s/1jGIeY26)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROzSZk)
-* [MEGA下载](https://mega.co.nz/#!HFMFAZBK!pimpxJuWu7QFuSYg-NIUxGml1GmeKc_h8OQDTD08H94)
+* [FilePi下载](http://filepi.com/i/tUdVudE)
 * [千易下载](http://1000eb.com/1ggec)
