--- a/source/_posts/啊哈！算法.md
+++ b/source/_posts/啊哈！算法.md
@@ -84,5 +84,5 @@ ISBN: 9787115354594
 
 * [百度云下载](http://pan.baidu.com/s/1c0oa0uc)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROsl4F)
-* [MEGA下载](https://mega.co.nz/#!LNkx3T7D!riXuyJ_pfzuU2qadq8WNS5uYj_kI3Bw2A_hGfnrn4ts)
+* [FilePi下载](http://filepi.com/i/pPAATFx)
 * [千易下载](http://1000eb.com/1enb8)
