--- a/source/_posts/程序员修炼之道.md
+++ b/source/_posts/程序员修炼之道.md
@@ -50,5 +50,5 @@ ISBN: 9787505397194
 
 * [百度云下载](http://pan.baidu.com/s/1gdKkR0B)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTBaH)
-* [MEGA下载](https://mega.co.nz/#!rc0UwZDI!CTLy_nJAyoU4Z7cy-ngH2yeFwLrMO8vwxVOnVbrTgoU)
+* [FilePi下载](http://filepi.com/i/RhUkGP5)
 * [千易下载](http://1000eb.com/1gge5)
