--- a/source/_posts/程序员健康指南.md
+++ b/source/_posts/程序员健康指南.md
@@ -136,5 +136,5 @@ ISBN: 9787115367167
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROyYOU)
 * [百度云下载](http://pan.baidu.com/s/1ntuX5RN)
-* [MEGA下载](https://mega.co.nz/#!GBsFxIZS!dB5f_tRXWadjGb2kbZHRwuMnpTVo2QRk36Cr9kW1wcw)
+* [FilePi下载](http://filepi.com/i/x3AmZhO)
 * [千易下载](http://1000eb.com/1ggdj)
