--- a/source/_posts/编程珠玑.md
+++ b/source/_posts/编程珠玑.md
@@ -175,5 +175,5 @@ ISBN: 9787115179289
 
 + [百度云下载](http://pan.baidu.com/s/1qWmqcws)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFAAvA)
-+ [MEGA下载](https://mega.co.nz/#!HdVhhATJ!_VfNXLnLYUiV1WjPXPLAoQ-pY4L0SWn1dvaiWxw1fbw)
++ [FilePi下载](http://filepi.com/i/eDLi0kv)
 + [千易下载](http://1000eb.com/1ggd8)
