--- a/source/_posts/计算机组成与设计.md
+++ b/source/_posts/计算机组成与设计.md
@@ -412,5 +412,5 @@ B.13　练习题533
 
 + [百度云下载](http://pan.baidu.com/s/1c09Fd52)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_Gma)
-+ [MEGA下载](https://mega.co.nz/#!HM02CCDL!1rTW-qVZ5loaHoHpGgI2F7ctU43nWKmC62z8j0Tf_Kk)
++ [FilePi下载](http://filepi.com/i/SwpORV6)
 + [千易下载](http://1000eb.com/1ggga)
