--- a/source/_posts/七周七语言.md
+++ b/source/_posts/七周七语言.md
@@ -279,5 +279,5 @@ Clojure、Haskell） 241
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRP4DlW)
 * [百度云下载](http://pan.baidu.com/s/1dD2FzuL)
-* [MEGA下载](https://mega.co.nz/#!KAM3UJCD!Be1YgR94_BC01KKwqFBlvTxZybnosH-bY54jQedwY6I)
+* [FilePi下载](http://filepi.com/i/m0U1Rrm)
 * [千易下载](http://1000eb.com/1gghf)
