--- a/source/_posts/人人都是产品经理.md
+++ b/source/_posts/人人都是产品经理.md
@@ -113,3 +113,4 @@ ISBN: 9787121170690
 * [百度云下载](http://pan.baidu.com/s/1i34Ekmh)
 * [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcQ)
 * [千易下载](http://1000eb.com/1dyim)
+* [FilePi下载](http://filepi.com/i/pvZp6cr)
