--- a/source/_posts/人件.md
+++ b/source/_posts/人件.md
@@ -68,5 +68,5 @@ ISBN: 9787302063841
 
 * [百度云下载](http://pan.baidu.com/s/1mgEA3pu)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTBaI)
-* [MEGA下载](https://mega.co.nz/#!WYUxjKrR!06kzw9i8MY1sR-UJXIHAAM_D5QNZCkZel50qwcozvac)
+* [FilePi下载](http://filepi.com/i/eKzcXyA)
 * [千易下载](http://1000eb.com/1gghl)
