--- a/source/_posts/企业应用架构模式.md
+++ b/source/_posts/企业应用架构模式.md
@@ -353,5 +353,5 @@ ISBN: 9787111303930
 
 + [百度云下载](http://pan.baidu.com/s/1c0z5HSW)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_mDy)
-+ [MEGA下载](https://mega.co.nz/#!nB9WCTBC!kfGcRZYVqXBWpGWdMDW29hyOY9a8U9q17g6yJYZl5cs)
++ [FilePi下载](http://filepi.com/i/LwkZLa4)
 + [千易下载](http://1000eb.com/1gghd)
