--- a/source/_posts/信息简史.md
+++ b/source/_posts/信息简史.md
@@ -64,3 +64,4 @@ ISBN: 9787115331809
 * [百度云下载](http://pan.baidu.com/s/1eQB5Xr8)
 * [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRd9)
 * [千易下载](http://1000eb.com/1dyit)
+* [FilePi下载](http://filepi.com/i/WXnuOZf)
