--- a/source/_posts/写给大家看的设计书.md
+++ b/source/_posts/写给大家看的设计书.md
@@ -169,5 +169,5 @@ OpenType
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROvoeX)
 * [百度云下载](http://pan.baidu.com/s/1ntolX1n)
-* [MEGA下载](https://mega.co.nz/#!SRNnCCjL!HI9CCk3dZ2geaOfnYnbkl2BkJVYoa4kGwB611zS0GJU)
+* [FilePi下载](http://filepi.com/i/VR2Ql85)
 * [千易下载](http://1000eb.com/1ggir)
