--- a/source/_posts/史蒂夫·乔布斯传.md
+++ b/source/_posts/史蒂夫·乔布斯传.md
@@ -83,3 +83,4 @@ ISBN: 9787508643298
 * [百度云下载](http://pan.baidu.com/s/1CudpO)
 * [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRcV)
 * [千易下载](http://1000eb.com/1dyin)
+* [FilePi下载](http://filepi.com/i/lsOqxvz)
