--- a/source/_posts/数学之美.md
+++ b/source/_posts/数学之美.md
@@ -69,5 +69,5 @@ ISBN: 9787115282828
 
 * [百度云下载](http://pan.baidu.com/s/1qWBYzTy)
 * [微盘下载](http://vdisk.weibo.com/s/qBHeHbwa2TRdd)
-* [百度云下载](http://pan.baidu.com/s/1pJp8UXd)
+* [FilePi下载](http://filepi.com/i/qjGsciK)
 * [千易下载](http://1000eb.com/1dyio)
