--- a/source/_posts/数据挖掘.md
+++ b/source/_posts/数据挖掘.md
@@ -395,5 +395,5 @@ ISBN: 9787111391401
 
 * [百度云下载](http://pan.baidu.com/s/1eQBCTkY)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXImo)
-* [百度云下载](http://pan.baidu.com/s/1DD5SU)
+* [FilePi下载](http://filepi.com/i/EGrPOqu)
 * [千易下载](http://1000eb.com/1gghv)
