--- a/source/_posts/数据挖掘导论.md
+++ b/source/_posts/数据挖掘导论.md
@@ -316,4 +316,4 @@ ISBN: 9787115241009
 + [百度云下载](http://pan.baidu.com/s/1gdtZRqj)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFnUlG)
 + [千易下载](http://1000eb.com/1gczo)
-+ [MEGA下载](https://mega.nz/#!aRshDIIK!oOMyIS22s9A94ojIcnWJDPpErAzdlvbbziXRPidKsQA)
++ [FilePi下载](http://filepi.com/i/K0FckVA)
