--- a/source/_posts/松本行弘的程序世界.md
+++ b/source/_posts/松本行弘的程序世界.md
@@ -456,5 +456,5 @@ ISBN: 9787115255075
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROA17p)
 * [百度云下载](http://pan.baidu.com/s/1hqw4yYo)
-* [MEGA下载](https://mega.co.nz/#!PI02jZYK!-XibxanYTvEGEG6eRKienGwt9Vid2WU0iu26b1FV1UQ)
+* [FilePi下载](http://filepi.com/i/ojHnWXz)
 * [千易下载](http://1000eb.com/1ggi9)
