--- a/source/_posts/浪潮之巅.md
+++ b/source/_posts/浪潮之巅.md
@@ -218,7 +218,7 @@ ISBN: 9787115336446
 ## 下载 ##
 
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFAy3b)
-+ [MEGA下载](https://mega.co.nz/#!yJEiXKTJ!4LMsc1OdEV8a7dno8dnbg7f-K0WB1mQvI3FIs1wMoU0)
++ [FilePi下载](http://filepi.com/i/1rBMIfL)
 + [千易下载](http://1000eb.com/1dsg9)
 
 <!-- 1e
