--- a/source/_posts/线上幽灵.md
+++ b/source/_posts/线上幽灵.md
@@ -88,5 +88,5 @@ ISBN: 9787121209499
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRPb2ht)
 * [百度云下载](http://pan.baidu.com/s/1qW8z35q)
-* [MEGA下载](https://mega.co.nz/#!SRdkkZZB!78zvpfYSzfwUU7PK8gFArOwohb30RdHpPNSMeeoylOc)
+* [FilePi下载](http://filepi.com/i/YQ1lYam)
 * [千易下载](http://1000eb.com/1ggik)
