--- a/source/_posts/软件测试.md
+++ b/source/_posts/软件测试.md
@@ -381,5 +381,5 @@ ISBN: 9787115247995
 
 + [百度云下载](http://pan.baidu.com/s/1kTjc0N9)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRE_NNg)
-+ [MEGA下载](https://mega.co.nz/#!XJEEEJLC!AIVULsD1ItXT1yqZHH_qtYuNOsqspO_GuKpDSrjEmgI)
++ [FilePi下载](http://filepi.com/i/Zh7JBY6)
 + [千易下载](http://1000eb.com/1gghh)
