--- a/source/_posts/软件随想录.md
+++ b/source/_posts/软件随想录.md
@@ -82,5 +82,5 @@ ISBN: 9787115216342
 
 + [百度云下载](http://pan.baidu.com/s/1qWxCxje)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFlVTc)
-+ [MEGA下载](https://mega.co.nz/#!HQUxVCoI!hAudK3n2JO5uKw_RM6RdsiuoE2-bap0bAhV0qTr9SfA)
++ [FilePi下载](http://filepi.com/i/u01FhHL)
 + [千易下载](http://1000eb.com/1gghm)
