--- a/source/_posts/入侵的艺术.md
+++ b/source/_posts/入侵的艺术.md
@@ -238,5 +238,5 @@ ISBN: 9787302373582
 
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YRORnN7)
 * [百度云下载](http://pan.baidu.com/s/1eQnesP8)
-* [MEGA下载](https://mega.co.nz/#!uJEk3TxY!r1fbryoI08HM6GiCTUHCbEYcidr18mIvePXLcTCF9xY)
+* [FilePi下载](http://filepi.com/i/TbcUDAS)
 * [千易下载](http://1000eb.com/1gghi)
