--- a/source/_posts/图解网站分析.md
+++ b/source/_posts/图解网站分析.md
@@ -361,5 +361,5 @@ Adplanner的使用方法　　256
 
 + [百度云下载](http://pan.baidu.com/s/1c09FdxI)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFkDvQ)
-+ [MEGA下载](https://mega.co.nz/#!TMFwxYqY!sRegEtWM5yK1UT252P5FE7kJxp3lEjUsbryE-bcdcGY)
++ [FilePi下载](http://filepi.com/i/WxlfLUe)
 + [千易下载](http://1000eb.com/1ggig)
