--- a/source/_posts/数据挖掘十大算法.md
+++ b/source/_posts/数据挖掘十大算法.md
@@ -110,5 +110,5 @@ ISBN: 9787302310617
 
 * [百度云下载](http://pan.baidu.com/s/1mgCCylq)
 * [微盘下载](http://vdisk.weibo.com/s/aADaW4YROVJhx)
-* [MEGA下载](https://mega.co.nz/#!zB8UWCBJ!k0yrjjHyZvVpV1i91s8aLtdvKOxfmhG6KScNeqDunPk)
+* [FilePi下载](http://filepi.com/i/5FgvLM7)
 * [千易下载](http://1000eb.com/1gght)
