--- a/source/_posts/离散数学及其应用.md
+++ b/source/_posts/离散数学及其应用.md
@@ -592,5 +592,5 @@ ISBN: 9787111350392
 
 + [百度云下载](http://pan.baidu.com/s/1pJEIsor)
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFkC_n)
-+ [MEGA下载](https://mega.co.nz/#!vUcG0ILa!zC4KqclO3vrzkYorAEhXyl0CRDF6P54C6UmFExjmB68)
++ [FilePi下载](http://filepi.com/i/mY6TjNx)
 + [千易下载](http://1000eb.com/1ggh5)
