--- a/source/_posts/人件.md
+++ b/source/_posts/人件.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img5.douban.com/lpic/s1090686.jpg)
 
-格式：PDF
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -66,7 +66,7 @@ ISBN: 9787302063841
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1mgEA3pu)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTBaI)
-* [FilePi下载](http://filepi.com/i/eKzcXyA)
-* [千易下载](http://1000eb.com/1gghl)
+* [百度云下载](http://pan.baidu.com/s/1i3hNK4d)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YREZxzX)
+* [FilePi下载](http://filepi.com/i/dSHRYVB)
+* [千易下载](http://1000eb.com/1hwfl)
