--- a/source/_posts/人月神话.md
+++ b/source/_posts/人月神话.md
@@ -1,4 +1,4 @@
-title: 人月神话 （中文版）
+title: 人月神话（二十周年纪念版）（中文版）
 date: 2015-04-29 15:32:51
 categories:
   - 工程
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img3.douban.com/lpic/s2685011.jpg)
 
-格式：PDF
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -84,7 +84,7 @@ Mills的建议
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1o6OFL6E)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTBaF)
-* [FilePi下载](http://filepi.com/i/9RChGOP)
-* [千易下载](http://1000eb.com/1gghk)
+* [百度云下载](http://pan.baidu.com/s/1jG4MoNs)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YREZxzY)
+* [FilePi下载](http://filepi.com/i/qfBQIzQ)
+* [千易下载](http://1000eb.com/1hwfm)
