--- a/source/_posts/疯狂的程序员.md
+++ b/source/_posts/疯狂的程序员.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img5.douban.com/lpic/s3325997.jpg)
 
-格式：PDF
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -27,7 +27,7 @@ ISBN: 9787115190239
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRORoj3)
-* [百度云下载](http://pan.baidu.com/s/1eQ8dcFg)
-* [FilePi下载](http://filepi.com/i/g9G2XFT)
-* [千易下载](http://1000eb.com/1ggem)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YREZyb7)
+* [百度云下载](http://pan.baidu.com/s/1qW9ZKNa)
+* [FilePi下载](http://filepi.com/i/fWouKTu)
+* [千易下载](http://1000eb.com/1hwfi)
