--- a/source/_posts/结网.md
+++ b/source/_posts/结网.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img3.douban.com/lpic/s26373622.jpg)
 
-格式：PDF
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -57,10 +57,10 @@ Beta 个人修炼　　189
 
 ## 下载 ##
 
-+ [百度云下载](http://pan.baidu.com/s/1c095TMo)
-+ [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXzhQ)
-+ [FilePi下载](http://filepi.com/i/R8iOvcq)
-+ [千易下载](http://1000eb.com/1gggq)
++ [百度云下载](http://pan.baidu.com/s/1eQDHTj8)
++ [微盘下载](http://vdisk.weibo.com/s/aADaW4YREZxzp)
++ [FilePi下载](http://filepi.com/i/8mlkrxX)
++ [千易下载](http://1000eb.com/1hwfk)
 
 <!-- 1e
 + [微盘下载](http://vdisk.weibo.com/s/aADaW4YREXZaM)
