--- a/source/_posts/编程之美.md
+++ b/source/_posts/编程之美.md
@@ -102,7 +102,7 @@ ISBN: 9787121060748
 
 ## 下载 ##
 
-* [百度云下载](http://pan.baidu.com/s/1jG1hvdO)
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YROTAKc)
-* [FilePi下载](http://filepi.com/i/kB9X7ef)
-* [千易下载](http://1000eb.com/1ggd9)
+* [百度云下载](http://pan.baidu.com/s/1sjrGLzB)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YREZybE)
+* [FilePi下载](http://filepi.com/i/lj5VrNs)
+* [千易下载](http://1000eb.com/1hwfd)
