--- a/source/_posts/七周七语言.md
+++ b/source/_posts/七周七语言.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img3.douban.com/lpic/s9046771.jpg)
 
-格式：PDF
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -277,7 +277,6 @@ Clojure、Haskell） 241
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRP4DlW)
-* [百度云下载](http://pan.baidu.com/s/1dD2FzuL)
-* [FilePi下载](http://filepi.com/i/m0U1Rrm)
-* [千易下载](http://1000eb.com/1gghf)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFc3Bh)
+* [FilePi下载](http://filepi.com/i/IMz19xk)
+* [千易下载](http://1000eb.com/1i284)
