--- a/source/_posts/入侵的艺术.md
+++ b/source/_posts/入侵的艺术.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img3.douban.com/lpic/s27439971.jpg)
 
-格式：PDF
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -236,7 +236,6 @@ ISBN: 9787302373582
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRORnN7)
-* [百度云下载](http://pan.baidu.com/s/1eQnesP8)
-* [FilePi下载](http://filepi.com/i/TbcUDAS)
-* [千易下载](http://1000eb.com/1gghi)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFclg_)
+* [FilePi下载](http://filepi.com/i/eA823iX)
+* [千易下载](http://1000eb.com/1i380)
