--- a/source/_posts/欺骗的艺术.md
+++ b/source/_posts/欺骗的艺术.md
@@ -6,7 +6,7 @@ categories:
 
 ![](http://img3.douban.com/lpic/s27439981.jpg)
 
-格式：PDF
+格式：EPUB
 类型：文字版
 
 <!--more-->
@@ -292,7 +292,6 @@ ISBN: 9787302369738
 
 ## 下载 ##
 
-* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRORojS)
-* [百度云下载](http://pan.baidu.com/s/1o6vB0XO)
-* [FilePi下载](http://filepi.com/i/65eiYAp)
-* [千易下载](http://1000eb.com/1gghe)
+* [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFcnKi)
+* [FilePi下载](http://filepi.com/i/60npBsE)
+* [千易下载](http://1000eb.com/1i39i)
