--- a/source/_posts/产品经理那些事儿.md
+++ b/source/_posts/产品经理那些事儿.md
@@ -6,9 +6,8 @@ categories:
 
 ![](http://img4.douban.com/lpic/s27218469.jpg)
 
-格式：PDF
-类型：扫描版
-大小：11.4M
+格式：EPUB
+类型：文字版
 
 <!--more-->
 
@@ -108,7 +107,6 @@ Why Buy From Me　　244
 
 ## 下载 ##
 
-+ [百度云下载](http://pan.baidu.com/s/1hqeVA40)
-+ [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFwarR)
-+ [FilePi下载](http://filepi.com/i/4KQuuY6)
-+ [千易下载](http://1000eb.com/1ggdp)
++ [微盘下载](http://vdisk.weibo.com/s/aADaW4YRFcI1N)
++ [FilePi下载](http://filepi.com/i/RCWbCk5)
++ [千易下载](http://1000eb.com/1i3nk)
