--- a/source/_posts/开源软件架构.md
+++ b/source/_posts/开源软件架构.md
@@ -2,6 +2,7 @@
 title: 开源软件架构
 date: 2016-04-18 16:20:51
 tags:
+  - 设计模式·架构
 ---
 
 ![](http://box.kancloud.cn/cover_2015-08-20_55d5a2c2b43f_800x1068.jpg?imageMogr2/thumbnail/173x231!/interlace/1/quality/100)
